--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,6 +5,7 @@
     <ul class="navbar">
       <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About us</a></li>
       <li><a href="https://github.com/0x4d42" target="_blank">GitHub</a></li>
+      <li><a href="https://discord.gg/5MCYyadYXH" target="_blank">Discord</a></li>
     </ul>
   </div>
 </nav>
